# ACalc

./: .gitignore  CMakeLists.txt  Note.txt  README.md  config.h.in
headers/: astEvaluator.h  astNode.h  astPrinter.h  binary.h  call.h  evaluator.h  exception.h  expression.h  expressions.h  grouping.h  identifier.h  lexer.h  literal.h  parser.h  printer.h  token.h  tokentype.h  unary.h
src/: astEvaluator.cpp  astNode.cpp  astPrinter.cpp  binary.cpp  call.cpp  evaluator.cpp  evaluatorFunctions.cpp  exception.cpp  expression.cpp  grouping.cpp  identifier.cpp  lexer.cpp  literal.cpp  main.cpp  parser.cpp  printer.cpp  token.cpp  unary.cpp
tests/: evaluatortest.cpp  lexertest.cpp  parsertest.cpp
